2008-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/PortReaderBuffer.h: add 
	disableCallback method (thanks Andreu Corominas Murtra for
	the suggestion)

2008-11-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: freezing version 2.2.2

2008-11-19  Lorenzo Natale <nat@liralab.it>

	* src/YARP_OS/src/Run.cpp: removed print in Run.cpp.

2008-11-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/allegro/yarp.asd: patch from Lorenz M\"{o}senlechner
	for Allegro Lisp.

	* example/swig/CMakeLists.txt: patch from Lorenz M\"{o}senlechner
	for Allegro Lisp.

2008-10-27  Lorenzo Natale <nat@liralab.it>

	* src/YARP_sig/include/yarp/sig/Matirx.h: corrected bug in submatrix function,
	added regression test.

2008-10-24  Lorenzo Natale <nat@liralab.it>

	* src/YARP_dev/include/yarp/dev/Attachable.h: new interface for an attachable device
	* src/YARP_dev/include/yarp/dev/CartesianControl.h: new interface for a cartesian controller

2008-10-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/carrier_expert.dox: start tutorial on creating carriers.

	* example/carrier/main.cpp: add example of creating a trivial
	new carrier.

2008-10-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/Carrier.h: simplify
	inheritance tree for Carrier class by removing unused dependency
	on ShiftStream.  This is part of a documentation clean up.

2008-10-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ThreadImpl.cpp: add setPriority/getPriority
	functions (they just map onto ACE's implementation).

	* src/libYARP_OS/src/Thread.cpp: fix for bug
	2168847 ("Thread::onStop() problem").  Thanks to Alexandre
	Bernardino for reporting this.

2008-10-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/rand/rand.cpp: correct out-of-date example (Rand was
	moved from namespace yarp::sig to yarp::math).

	* scripts/compile-examples: update dumb test script to make sure